[tool.poetry]
authors = ["Sam <dev@samarthj.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
]
description = "Helpers for common functional work done across several projects"
homepage = "https://github.com/samarthj/pylib-helpers"
license = "GPL-3.0-or-later"
name = "pylib-helpers"
packages = [{include = "helpers"}]
readme = "README.md"
repository = "https://github.com/samarthj/pylib-helpers"

version = "0.3.0a4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/samarthj/pylib-helpers/issues"

[tool.poetry.dependencies]
colorama = {version = "^0.4.4", allow-prereleases = true}
python   = ">=3.9,<4.0"


[tool.poetry.dev-dependencies]
autopep8                     = {version = "*", allow-prereleases = true}
bandit                       = {version = "*", allow-prereleases = true}
black                        = {version = "*", allow-prereleases = true}
commitizen                   = {version = "*", allow-prereleases = true}
flake8                       = {version = "*", allow-prereleases = true}
flake8-bandit                = {version = "*", allow-prereleases = true}
flake8-black                 = {version = "*", allow-prereleases = true}
flake8-comprehensions        = {version = "*", allow-prereleases = true}
flake8-expression-complexity = {version = "*", allow-prereleases = true}
flake8-functions             = {version = "*", allow-prereleases = true}
flake8-isort                 = {version = "*", allow-prereleases = true}
flake8-pytest                = {version = "*", allow-prereleases = true}
flake8-pytest-style          = {version = "*", allow-prereleases = true}
flake8-simplify              = {version = "*", allow-prereleases = true}
flake8-use-fstring           = {version = "*", allow-prereleases = true}
isort                        = {version = "*", allow-prereleases = true}
mccabe                       = {version = "*", allow-prereleases = true}
mypy                         = {version = "*", allow-prereleases = true}
pep8-naming                  = {version = "*", allow-prereleases = true}
pylint                       = {version = "*", allow-prereleases = true}
pyproject-flake8             = {version = "*", allow-prereleases = true}
pytest                       = {version = "*", allow-prereleases = true}
rope                         = {version = "*", allow-prereleases = true}

[tool.black]
line_length = 120

[tool.isort]
ensure_newline_before_comments = true
extend_skip                    = [".vscode"]
force_grid_wrap                = 0
force_sort_within_sections     = true
group_by_package               = true
import_heading_stdlib          = "StdLib"
include_trailing_comma         = true
lexicographical                = true
line_length                    = 120
multi_line_output              = 3
profile                        = "black"
remove_redundant_aliases       = true
src_paths                      = ["helpers", "tests"]
use_parentheses                = true

[tool.flake8]
black-config              = 'pyproject.toml'
extend-exclude            = [".venv", "util", "experiments"]
extend-ignore             = "E203,E501,W503,C0330,C0326,S101,S603,E722"
indent-size               = 4
max-complexity            = 10
max-expression-complexity = 10
max-line-length           = 120
max-returns-amount        = 5
show-source               = "true"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

## Poe the Poet -- task definitions for global environment
[tool.poe.tasks]
format         = {cmd = "black --config pyproject.toml --color .", help = "Format code using black config"}
format-imports = {cmd = "isort --settings-file pyproject.toml --color .", help = "Optimize and sort imports"}
lint           = {cmd = "pflake8", help = "Print lint errors"}
lint-plugins   = {cmd = "pflake8 --version", help = "Print plugins used for linting"}
style          = {cmd = "black --config pyproject.toml --color --diff .", help = "Check code style"}
style-imports  = {cmd = "isort --settings-file pyproject.toml --color --diff .", help = "Check code style"}
test           = {cmd = "pytest tests", help = "Run the tests"}

clean = """
rm -rf .mypy_cache
       .pytest_cache
       .venv
       poetry.lock
       dist
       build
       ./**/__pycache__
"""

[tool.poetry-dynamic-versioning]
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif distance > 20 -%}
        {{ serialize_pep440(base, stage="rc", revision=distance) }}
    {%- elif distance > 10 -%}
        {{ serialize_pep440(base, stage="b", revision=distance) }}
    {%- elif distance > 0 -%}
        {{ serialize_pep440(base, stage="a", revision=distance) }}
    {%- endif -%}
"""
latest-tag = true
pattern = '^v(?P<base>\d+\.\d+\.\d+)'
vcs = "git"

[tool.commitizen]
name = "cz_conventional_commits"
style = [
  [
    "qmark",
    "fg:#ff9d00 bold",
  ],
  [
    "question",
    "bold",
  ],
  [
    "answer",
    "fg:#ff9d00 bold",
  ],
  [
    "pointer",
    "fg:#ff9d00 bold",
  ],
  [
    "highlighted",
    "fg:#ff9d00 bold",
  ],
  [
    "selected",
    "fg:#cc5454",
  ],
  [
    "separator",
    "fg:#cc5454",
  ],
  [
    "instruction",
    "",
  ],
  [
    "text",
    "",
  ],
  [
    "disabled",
    "fg:#858585 italic",
  ],
]
version_files = ["pyproject.toml:version"]
